<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/add_question"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="bottom"
        android:hint="@string/add_question"

        android:textColor="@color/pink_dark"
        android:inputType="textMultiLine"
        android:textColorHint="@color/pink_light"
        android:backgroundTint="@color/purple"
        />

    <EditText
        android:id="@+id/add_correctAnswer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/add_question"
        android:gravity="bottom"
        android:hint="@string/correct_answer"

        android:textColor="@color/pink_dark"
        android:inputType="textMultiLine"
        android:textColorHint="@color/pink_light"
        android:backgroundTint="@color/purple"
        />


    <EditText
        android:id="@+id/add_wrongAnswer1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/add_correctAnswer"
        android:gravity="bottom"
        android:hint="@string/first_wrong_answer"

        android:textColor="@color/pink_dark"
        android:inputType="textMultiLine"
        android:textColorHint="@color/pink_light"
        android:backgroundTint="@color/purple"
        />


    <EditText
        android:id="@+id/add_wrongAnswer2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/add_wrongAnswer1"
        android:gravity="bottom"
        android:hint="@string/second_wrong_answer"

        android:textColor="@color/pink_dark"
        android:inputType="textMultiLine"
        android:textColorHint="@color/pink_light"
        android:backgroundTint="@color/purple"
        />


    <ImageView
        android:id="@+id/clear_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/clear_button"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/done_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/done_button"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="40dp"
        />

</RelativeLayout>