<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!--
        background  backgroundTint  backgroundTintMode
        android:textAppearance bases text color, typeface, size, and style
    -->

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="35sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/option1"
        android:layout_below="@id/question"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/option1"
        android:background="@drawable/options_background"

        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:theme="@style/Themes.Options"

        android:visibility="invisible"
        />

    <TextView
        android:id="@+id/option2"
        android:layout_below="@id/option1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/option2"
        android:background="@drawable/options_background"

        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_alignLeft="@id/option1"
        android:layout_alignRight="@id/option1"
        android:theme="@style/Themes.Options"

        android:visibility="invisible"

        />

    <TextView
        android:id="@+id/option3"
        android:layout_below="@id/option2"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/option3"
        android:background="@drawable/options_background"

        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_alignLeft="@id/option1"
        android:layout_alignRight="@id/option1"
        android:theme="@style/Themes.Options"

        android:visibility="invisible"
        />

    <ImageView
        android:id="@+id/empty_card"
        android:src="@drawable/empty_card"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:paddingTop="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:visibility="invisible"
        />


    <ImageView
        android:id="@+id/edit_button"
        android:src="@drawable/edit_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="40dp"
        android:layout_alignParentEnd="true"
        />

    <ImageView
        android:id="@+id/add_button"
        android:src="@drawable/add_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        />

    <ImageView
        android:id="@+id/show_button"
        android:src="@drawable/show_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="40dp"
        />

    <ImageView
        android:id="@+id/hide_button"
        android:src="@drawable/hide_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"
        />

    <ImageView
        android:id="@+id/next_button"
        android:src="@drawable/next_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:id="@+id/delete_button"
        android:src="@drawable/delete_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>

